sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '(' expected but identifier found.
    if plusPetitQue(i+1,valeur)==true {
       ^AlgBubbleSort1:9: error: illegal start of simple expression
  }
  ^